objects/FD_Package_File__c.object
<CustomObject>
    <fields>
        <fullName>FD_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FD_File_Type__c</fullName>
        <label>File Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Word Doc (*.docx)</fullName>
                </value>
                <value>
                    <fullName>XPS Doc (*.xps)</fullName>
                </value>
                <value>
                    <fullName>PDF (*.pdf)</fullName>
                </value>
                <value>
                    <fullName>Plain Test (*.txt)</fullName>
                </value>
                <value>
                    <fullName>Web Page (*.html)</fullName>
                </value>
                <value>
                    <fullName>RAR (*.rar)</fullName>
                </value>
                <value>
                    <fullName>Database (*.db)</fullName>
                </value>
                <value>
                    <fullName>SQL Database (*.sql)</fullName>
                </value>
                <value>
                    <fullName>XML (*.xml)</fullName>
                </value>
                <value>
                    <fullName>Image (*.png/*.jpeg)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FD_Package__c</fullName>
        <label>Package</label>
        <referenceTo>FD_Package__c</referenceTo>
        <relationshipLabel>Package Files</relationshipLabel>
        <relationshipName>Package_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Package File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FD_Active__c</columns>
        <columns>FD_File_Type__c</columns>
        <columns>FD_Package__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>